# OSII-CMakeClass

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: foo.h
lib/: CMakeLists.txt
lib/calculator/include/: calculator.h
lib/calculator/src/: calculator.c
src/: foo.c  main.c
tests/: CMakeLists.txt
tests/unit_tests/: CMakeLists.txt  calculator_tests.c
